[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "py65"
version = "2.0.0.dev0"
description = "6502 microprocessor simulation package"
authors = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
maintainers = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Assembly",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/mnaberez/py65"

[project.scripts]
py65mon = "py65.monitor:main"
